# piface

./: .gitignore  README  README.md  fromGertWithMCPtest.c  interface.py  setup.py  shift.py  spimodule.c  spitest.c  whackAMole.py
c/: .gitignore  Makefile.am  autogen.sh  configure.ac  piface-1.0.pc.in
c/examples/: Makefile  board_reset.c  input_reader.c  the_amazing_led_show.c
c/src/piface/: .gitignore  Makefile  pfio.c  pfio.h
c/unitytest/: Makefile  README.md
c/unitytest/test/: tests.c
demos/: racingpi.sh  simon.py  twitterMoodCube.py  whackAMole.py
demos/racingpi/: game.py  gui.py  questions.txt  racingpi_db_helper.py
demos/twitter_chicken/: raspberry_pi_farm.py  twitter_listen.py  twitter_listen_user.py
easyteach/: setup.py
easyteach/easyteach/: talker.py
etc/emmisions_testing/: emtest1.py  emtest_all.py
examples/: sweep.py  toggle.py
lib/examples/: Makefile  board_reset.c
lib/piface/: pfio.c  pfio.h
misc/Desktop/: piface.desktop  scratch_handler.desktop
misc/emmisions_testing/: emtest_all.py
misc/icons/: piface.xpm
pfio/: __init__.py
piem/: emulator.py  emulator_parts.py  off  off.c  on  on.c  test.c
piem/pytest/: framework.py  imageView.py  shapes.py  testHit.py
piface/: emulator.py  emulator_parts.py  pfio.py  spimodule.c
racingpi/: __init__.py  game.py  gui.py  questions.txt
scratch/: scratch_handler.py
scripts/: i2c-setup  piface-emulator  spidev_setup.sh  spivisualiser  startwebserver  stopwebserver
tests/: piface_test.py
twitter_chicken/: pfio.py  raspberry_pi_farm.py  twitter_listen.py  twitter_listen_user.py
(+33 files in other folders)
